--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-<div th:replace="base :: menubar"></div>
+<div th:replace="base :: nav"></div>
 
 <div class="container bg-light">
     <h2>Login Information</h2>
