--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -37,7 +37,7 @@ p {
 }
 
 body {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../image/imageflight.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../image/17_w730.jpg);
 
     background-repeat: no-repeat;
 
