--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -15,7 +15,7 @@
 
 <div class="container">
 
-    <h3 class="text-center py-3 pl-4 pr-5">All Flights</h3>
+    <h3 class="text-center py-3 pl-4 pr-5"> Flights</h3>
 
     <div align="center">
         <table class="table table-hover">
@@ -27,7 +27,6 @@
                 <th scope="col">To</th>
                 <th scope="col">Dep. Date</th>
                 <th scope="col">Arr. Date</th>
-                <th scope="col">Price</th>
                 <th scope="col">Aircraft</th>
             </tr>
             </thead>
@@ -39,15 +38,10 @@
                 <td th:text="${flight.to.code}"></td>
                 <td th:text="${flight.departure}"></td>
                 <td th:text="${flight.arrival}"></td>
-                <td th:text="${'$' + flight.price}"></td>
                 <td th:text="${flight.aircraft}"></td>
 
                 <td >
                     <a type="button" class="btn btn-secondary" th:href="@{/reserveFlight/{id}(id=${flight.id})}">Select</a>
-                </td>
-                <td sec:authorize="isAuthenticated()">
-                    <a sec:authorize="hasAuthority('ADMIN')"
-                       type="button" class="btn btn-secondary" th:href="@{/delete/{id}(id=${flight.id})}">Delete</a>
                 </td>
             </tr>
             </tbody>
