--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -6,10 +6,10 @@
     <title>Base</title>
 
     <th:block th:fragment="header">
-        <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
-        <script th:src="@{/js/bootstrap.min.js}" type="text/javascript"></script>
-        <script th:src="@{/js/bootstrap.bundle.min.js}" type="text/javascript"></script>
-        <link rel="stylesheet" th:href="@{/css/style.css}"/>
+        <!--<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>-->
+        <!--<script th:src="@{/js/bootstrap.min.js}" type="text/javascript"></script>-->
+        <!--<script th:src="@{/js/bootstrap.bundle.min.js}" type="text/javascript"></script>-->
+
     </th:block>
 </head>
 <body>
@@ -39,19 +39,31 @@
                 <li sec:authorize="isAnonymous()" class="nav-item text-light">
                     <a class="nav-link text-white" href="/register">Register</a>
                 </li>
-               <li sec:authorize="isAuthenticated()" class="nav-item text-light">
-                    <a class="nav-link text-white" href="/logout">Logout</a>
-                </li>
                 <li  sec:authorize="hasAuthority('ADMIN')" class="nav-item text-light">
                     <a class="nav-link text-white" href="/allflight">See All Flights </a>
                 </li>
                 <li  sec:authorize="hasAuthority('ADMIN')" class="nav-item text-light">
                     <a class="nav-link text-white" href="/addFlight">ADD Flight </a>
                 </li>
-
+                <li sec:authorize="isAuthenticated()" class="nav-item text-light">
+                    <a class="nav-link text-white" href="/logout">Logout</a>
+                </li>
             </ul>
         </div>
     </nav>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <!--<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>-->
+    <link rel="stylesheet" th:href="@{/css/style.css}"/>
+    <script
+            src="https://code.jquery.com/jquery-3.3.1.min.js"
+            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+            crossorigin="anonymous"></script>
+
+    <script
+            src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"
+            crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css"  crossorigin="anonymous">
+
 </div>
 
 <footer th:fragment="footer" class="navbar navbar navbar-expand-lg navbar-light bg-dark fixed-bottom">
@@ -60,6 +72,8 @@
         <h6>© 2018</h6>
     </div>
 </footer>
+
+
 
 </body>
 </html>
