--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -12,9 +12,12 @@
 <div class="container">
     <div class="jumbotron">
 
-        <form action=# th:action="@{/saveflight}" th:object="${flight}" method="post">
+        <form action=# th:action="@{/search}" th:object="${flight}" method="get">
             <input type="hidden" th:field="*{id}">
+            <input type="hidden" name="tripType"/>
 
+            <div><button id="one-way" class="btn flight-type" type="button">One Way</button>
+                <button id="round-trip" class="btn flight-type" type="button">Round Trip</button></div>
             <div class="col">
                 From: &nbsp;
                 <select class="form-control" th:field="*{from}">
@@ -35,12 +38,12 @@
             <br/>
             <div>
                 Departure date: &nbsp;
-                <input type="date" th:field="${flight.departure}" name="departure">
+                <input type="text" class="date-picker" id="departure-date" th:field="${flight.departure}" name="departure">
             </div>
             <br/>
             <div>
                 Return date: &nbsp;
-                <input type="date" th:field="${flight.arrival}" name="arrival">
+                <input type="text" class="date-picker" id="return-date" th:field="${flight.arrival}" name="arrival">
             </div>
             <br/>
             <div>
@@ -49,6 +52,8 @@
         </form>
 
     </div>
+    <script th:src="@{/js/flightSearch.js}" type="text/javascript"></script>
+
 </div>
 <div th:replace="base :: footer"></div>
 
