--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -1,61 +1,74 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8"/>
-    <title>Title</title>
-    <th:block th:insert="base :: header"></th:block>
+<meta charset="UTF-8" />
+<title>Title</title>
+<th:block th:insert="base :: header"></th:block>
 </head>
 <body>
 
-<div th:replace="base :: nav"></div>
+	<div th:replace="base :: nav"></div>
 
-<div class="container">
-    <div class="jumbotron">
+	<div class="container">
+		<div class="jumbotron">
 
-        <form action=# th:action="@{/search}" th:object="${flight}" method="get">
-            <input type="hidden" th:field="*{id}">
-            <input type="hidden" name="tripType"/>
+			<form action=# th:action="@{/search}" th:object="${flight}"
+				method="get">
+				<input type="hidden" th:field="*{id}"> <input type="hidden"
+					name="tripType" />
 
-            <div><button id="one-way" class="btn flight-type" type="button">One Way</button>
-                <button id="round-trip" class="btn flight-type" type="button">Round Trip</button></div>
-            <div class="col">
-                From: &nbsp;
-                <select class="form-control" th:field="*{from}">
-                    <option value="">Departure:</option>
-                    <option th:each="airport : ${airports}" th:value="${airport.code}"
-                            th:text="${airport.name}"></option>
-                </select>
-            </div>
-            <br/>
-            <div class="col">
-                To: &nbsp;
-                <select class="form-control" th:field="*{to}">
-                    <option value="">Arrival:</option>
-                    <option th:each="airport : ${airports}" th:value="${airport.code}"
-                            th:text="${airport.name}"></option>
-                </select>
-            </div>
-            <br/>
-            <div>
-                Departure date: &nbsp;
-                <input type="text" class="date-picker" id="departure-date" th:field="${flight.departure}" name="departure">
-            </div>
-            <br/>
-            <div>
-                Return date: &nbsp;
-                <input type="text" class="date-picker" id="return-date" th:field="${flight.arrival}" name="arrival">
-            </div>
-            <br/>
-            <div>
-                <input type="submit" class="btn btn-primary" value="Submit"/>
-            </div>
-        </form>
+				<div>
+					<button id="one-way" class="btn flight-type" type="button">One
+						Way</button>
+					<button id="round-trip" class="btn flight-type" type="button">Round
+						Trip</button>
+					<select name="numberOfPassengers">
+						<option value="">Number of Passengers</option>
+						<option th:each="i: ${#numbers.sequence(1,10)}" th:value="${i}"
+							th:text="${i}"></option>
+					</select> <select name="flightClass">
+						<option value="">Flight Class</option>
+						<option th:each="flightClass: ${flightClasses}"
+							th:value="${flightClass}" th:text="${flightClass}"></option>
+					</select>
+				</div>
+				<div class="col">
+					From: &nbsp; <select class="form-control" th:field="*{from}">
+						<option value="">Departure:</option>
+						<option th:each="airport : ${airports}" th:value="${airport.code}"
+							th:text="${airport.name}"></option>
+					</select>
+				</div>
+				<br />
+				<div class="col">
+					To: &nbsp; <select class="form-control" th:field="*{to}">
+						<option value="">Arrival:</option>
+						<option th:each="airport : ${airports}" th:value="${airport.code}"
+							th:text="${airport.name}"></option>
+					</select>
+				</div>
+				<br />
+				<div>
+					Departure date: &nbsp; <input type="text" class="date-picker"
+						id="departure-date" th:field="${flight.departure}"
+						name="departure">
+				</div>
+				<br />
+				<div>
+					Return date: &nbsp; <input type="text" class="date-picker"
+						id="return-date" th:field="${flight.arrival}" name="arrival">
+				</div>
+				<br />
+				<div>
+					<input type="submit" class="btn btn-primary" value="Submit" />
+				</div>
+			</form>
 
-    </div>
-    <script th:src="@{/js/flightSearch.js}" type="text/javascript"></script>
+		</div>
+		<script th:src="@{/js/flightSearch.js}" type="text/javascript"></script>
 
-</div>
-<div th:replace="base :: footer"></div>
+	</div>
+	<div th:replace="base :: footer"></div>
 
 
 </body>
