--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -42,6 +42,9 @@
                 <li  sec:authorize="hasAuthority('ADMIN')" class="nav-item text-light">
                     <a class="nav-link text-white" href="/allflight">See All Flights </a>
                 </li>
+                <li sec:authorize="isAuthenticated()" class="nav-item text-light">
+                    <a class="nav-link text-white" href="/reservations">All reservations</a>
+                </li>
                 <li  sec:authorize="hasAuthority('ADMIN')" class="nav-item text-light">
                     <a class="nav-link text-white" href="/addFlight">ADD Flight </a>
                 </li>
