--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -29,8 +29,8 @@
 						<th scope="col"></th>
 						<th scope="col">From</th>
 						<th scope="col">To</th>
-						<th scope="col">Dep. Date</th>
-						<th scope="col">Arr. Date</th>
+						<th scope="col">Dep.time</th>
+						<th scope="col">Arr.time</th>
 						<th scope="col">Aircraft</th>
 					</tr>
 				</thead>
